[package]
name = "diploma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ed25519-dalek = "1.0.1"
rand = "0.7.0"
rust-crypto = "0.2.36"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
iai = "0.1"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "iai"
harness = false
